<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="transactionViewModel"
            type="com.example.rbc_interview.viewModel.TransactionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_background_blue_600"
            android:padding="20dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_90"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_10"
            app:layout_constraintTop_toTopOf="@+id/h_guideline_5">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/guideline_60"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/account_name"
                    style="@style/txt_semibold_blue_200"
                    android:text="@string/str_account_name"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/account_number"
                    style="@style/txt_regular_blue_400"
                    android:text="@string/str_account_number"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/account_balance"
                    style="@style/txt_semibold_blue_200"
                    android:layout_marginTop="10dp"
                    android:text="@string/str_account_balance"
                    android:textColor="@color/white"
                    android:textSize="26sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/img_transaction"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/str_img_payment"
                app:layout_constraintStart_toEndOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_60"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".6" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/title_transactions"
            style="@style/txt_semibold_blue_200"
            android:layout_marginTop="10dp"
            android:text="@string/str_transaction_title"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@+id/guideline_10"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_90"
            app:layout_constraintStart_toStartOf="@+id/guideline_10"
            app:layout_constraintTop_toBottomOf="@+id/title_transactions">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="@{transactionViewModel.isSessionFinished}"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/str_transaction_list"
                android:layout_gravity="center"
                tools:listitem="@layout/custom_view_transactions" />

            <TextView
                android:id="@+id/errorMessage"
                android:text="@string/strNoData"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="22sp"
                android:visibility="@{transactionViewModel.dataFound}"
                android:textColor="@color/blue_600"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </FrameLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/h_guideline_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".05"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".05"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".95"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>